hotfix(refactor): move failing tests to selection and discard them for subsequent steps